--- a/index.html
+++ b/index.html
@@ -121,12 +121,15 @@
               <div style="font-family: Arial, Helvetica, sans-serif; font-size: 28px;"><b>Studies and Research</b></div>
               <p>
                 <br>
-                I am a <b>Postdoctoral Researcher</b> at <a href="https://www.lero.ie/">Lero, the Science Foundation 
+                I am a <b>Postdoctoral Fellow</b> at <a href="https://www.lero.ie/">Lero, the Science Foundation 
                 Ireland Research Centre for Software</a> at the <a href="https://www.ul.ie/">University of Limerick</a> (UL), 
                 working with <a href="https://www.lero.ie/people/brian-fitzgerald">Prof. Brian Fitzgerald</a> on the
-                <a href="https://trees.lero.ie/">TREES project</a>. <br>
+                <a href="https://trees.lero.ie/">TREES project</a> working on making the lives of Open Source Newcomers & projects a bit easier, 
+                in a collaboration project with Dr. Ahmed E. Hassan and his team at Huawei@Canada and 
+                also on facilitating InnerSource implementation at Huawei@China. <br>
                 I finished my Ph.D. in Computer Science from the <a href="https://www.utk.edu/">University of Tennessee, Knoxville</a> (UTK)
-                with <a href="http://mockus.org/">Dr. Audris Mockus</a>. <br>
+                with <a href="http://mockus.org/">Dr. Audris Mockus</a>, working on Open Source Software Supply Chain, bot detection, and 
+                modeling various user-affected software properties from the prespective of the Information System Success Model. <br>
                 I received my Bachelors and Masters Degree (under the Dual-Degree program) from the <a href="http://www.iitkgp.ac.in/">Indian 
                 Institute of Technology (IIT), Kharagpur</a> in Electronics and Electrical Communication 
                 Engineering and worked in <b>IBM</b> for 3 years before joining my Ph.D. <br></br>
@@ -137,12 +140,13 @@
             <!-- NEWS -->
             <div class="row">
                 <br>
-                <div style="font-family: Arial, Helvetica, sans-serif; font-size: 28px;"><b>Latest News (May 2021)</b></div>
+                <div style="font-family: Arial, Helvetica, sans-serif; font-size: 28px;"><b>Latest News (May 2022)</b></div>
                 <ul>
-                    <li>I have been awarded the "Distinguished Reviewer Award" for MSR 2021 Technical Track.</li>
-                    <li>Our papers <a href="https://arxiv.org/abs/2103.01145">The Secret Life of Hackathon Code</a> and <a href="https://arxiv.org/abs/2103.10167">Tracking Hackathon Code Creation and Reuse</a> have been accepted in the MSR'21 conference in the Techinal and Hackathon tracks respectively.</li>
-                    <li>I'm honored to serve as a PC member for the MSR'21 conference.</li>
-                    <li>Our paper <a href="https://arxiv.org/pdf/2005.10176">Representation of developer expertise in open source software</a> has been Accepted in ICSE'21 conference with an "Available" badge based on Artifact Evaluation.</li>
+                    <li>I have been awarded the "Distinguished Reviewer Award" for MSR 2022 Technical Track for the second consecutive year (after MSR'21).</li>
+                    <li>I'm honored to serve as the Publicity & Social Media Co-Chair, Shadow-PC Mentor, and PC member for the MSR'22 conference.</li>
+                    <li>I'm nonored to serve as a PC member in ICSE'23 Technical Track.</li>
+                    <li>I'm honored to serve as the Proceedings Chair in PROMISE'22.</li>
+                    <li>I'm have been promoted to a Postdoctoral Fellow in Lero at the University of Limerick.</li>
                 </ul>
             </div>
             <div class="row">
@@ -157,6 +161,7 @@
                     <li><a href="https://github.com/tapjdey/InnerSource_Project_Fitness">A tool for estimating the "Fitness" of a project for InnerSource style development.</a> (Can be translated to English and Chinese on the fly)</li>
                     <li>Our proposed model for assessing InnerSource-readiness of a candidate project has been accepted as a Pattern in <a href="https://github.com/InnerSourceCommons/InnerSourcePatterns/blob/master/patterns/1-initial/good-first-project.md">InnerSource Commons</a>.</li>
                   </ul>
+                <li><b>Open Source Newcomers:</b> Facilitating the success of new developers and projects joining the Open Source ecosystem. </li>
                 <!-- <li><b>Bots Research:</b> Detecting and Characterizing Bots in Social-Coding Platforms using the  -->
                   <!-- <a href="https://worldofcode.org/">World of Code </a> infrastructure.</li> -->
               </ul>
@@ -169,26 +174,25 @@
         <div class="col-md-12">
           <div class="row">
             <br>
-            <div style="font-family: Arial, Helvetica, sans-serif; font-size: 28px;"><b>What I love to spend my time on</b></div>
-            <p>
-              <br>
-              Knowledge, to me, is the ultimate ecstasy, and I strive to understand and decipher the way the world works. To me, it's not so much about "How the world works?", but about "Why does the world work the way it does?". 
-              <br>
-              I also am fascinated by how artificial and virtual intelligence can 
-              change our world, how we can cohabit the world peacefully,
-              and how it will change the society in future. 
-              <br>
-              I also am a staunch supporter of the 
+            <div style="font-family: Arial, Helvetica, sans-serif; font-size: 28px;"><b>Other interests</b></div>
+            <ul>
+              <li>
+              I am a staunch supporter of the 
               <a href="http://www.unesco.org/new/en/communication-and-information/portals-and-platforms/goap/open-science-movement/">Open Science Movement</a>,
-              and support making knowledge accessible to everyone. 
+              and support making knowledge accessible to everyone. To that end, I am really passionate about the success of the Open Source movement.</li>
+              <li>
+              I also feel scholars around the world should do everying they can to devise ways of mitigating the effects of climate change as much as possible. 
+              COVID-19 has shown everyone what the collective effort of scientists around the world can achieve and I'm hopeful we can do something about climate change as well.
+              To that end, I'm exploring how I myself can contribute to Green technologies.</li>
+              <li>
               I'm a big fan of <a href="https://www.youtube.com/user/Vsauce">Vsauce</a>, 
               <a href="https://www.youtube.com/user/1veritasium">Veritasium</a>, 
               <a href="https://www.youtube.com/user/Kurzgesagt">Kurzgesagt</a>, 
-              <a href="https://www.youtube.com/user/scishow">SciShow</a>, and similar informative YouTube channels.
-              <br>
+              <a href="https://www.youtube.com/user/scishow">SciShow</a>, and similar informative YouTube channels.</li>
+              <li>
               In terms of coding, I prefer using <i>R</i> (for statistical analysis), <i>shell 
               script</i> (for running small errands and big jobs), and <i>Python</i> (everything else).
-              <br>
+              </li>
               <!-- My other interests, in no particular order:
               <ul>
                 <li>Single Player RPG Video Games (with good graphics) - TES series, Assassin's Creed series, Mass Effect series, 
@@ -202,16 +206,17 @@
                 <li>A Good Story.</li>
               </ul>
               -->
-            </p>
+            </ul>
           </div> 
           <br>
           <!-- Old Projects -->
           <div class="row">
             <div style="font-family: Arial, Helvetica, sans-serif; font-size: 28px;"><b>Past/Dormant Research Projects</b></div>
             <ul>
-              <li>    Software Supply Chain: Exploring the Effects of Interdependencies in a Software Ecosystem on Popularity</li>
-              <li>     Predicting Pull Request Quality</li>
-              <li>	  Effects of Software Usage on Perceived Quality of a Software</li>
+              <li>    Research on code-commit bot detection.</li>
+              <li>    Software Supply Chain: Exploring the Effects of Interdependencies in a Software Ecosystem on Popularity.</li>
+              <li>    Predicting Pull Request Quality.</li>
+              <li>	  Effects of Software Usage on Perceived Quality of a Software.</li>
             </ul>
           </div>      
           <br>
@@ -219,8 +224,9 @@
           <div class="row">
             <div style="font-family: Arial, Helvetica, sans-serif; font-size: 28px;" id="teaching"><b>Teaching</b></div>
             <ul>
-              <li><b>Spring 2021 &mdash;</b> <i>Lecturer</i>: CS4911 - Introduction to Information Technology @ UL </li>
-              <li><b>Fall 2020 &mdash;</b> <i>Lecturer</i>: CS4911 - Introduction to Information Technology @ UL </li>
+              <li><b>Fall 2020 - Present &mdash;</b> <i>Lecturer</i>: CS4911 - Introduction to Information Technology @ UL </li>
+              <i>Modified the course and assessment to conform with COVID-19 related restrictions & virtual teaching requirements, 
+              included new topics like Cyber Security, Edge & Quantum Computing, and moderninzed the rest of the lecture topics to include latest developments.</i>
               <li> <b>Spring 2017 &mdash;</b> <i>Teaching Assistant:</i> <a href="http://web.eecs.utk.edu/~bvanderz/teaching/cs365Sp17/general_info.html"> Programming Languages and Systems</a> @ UTK</li>
               <li> <b>Fall 2016 &mdash; </b> <i>Teaching Assistant:</i> Fundamentals of Digital Archeology  @ UTK</li>
               <li><b>Spring 2016 &mdash; </b> <i>Teaching Assistant:</i> <a href="http://web.eecs.utk.edu/~mbeck/classes/Spring16-cs361/"> Operating Systems</a>  @ UTK</li>
@@ -234,7 +240,13 @@
             <div style="font-family: Arial, Helvetica, sans-serif; font-size: 28px;" ><b> Notable Positions, Awards, and Recognitions</b></div>
             <br>
             <ul>
-                <li> <b>[2021] -</b> Received the <a href="https://twitter.com/msrconf/status/1390444181655539716">"Distinguished Reviewer Award"</a> for MSR 2021 Technical Track. </li>
+                <li> <b>[2023] -</b> Will serve as a Program Committee member (Technical Track) in the <a href="https://conf.researchr.org/committee/icse-2023/icse-2023-technical-track-programme-committee">ICSE'23 conference.</a></li> 
+                <li> <b>[2022] -</b> Will serve as the Proceedings Chair in the <a href="https://promiseconf.github.io/2022/index.html">PROMISE'22 conference.</a></li>
+                <li> <b>[2022] -</b> Served as <a href="https://conf.researchr.org/committee/msr-2022/msr-2022-organizing-committee">Publicity & Social Media Co-Chair</a>, 
+                  <a href="https://conf.researchr.org/committee/msr-2022/msr-2022-shadow-pc-shadow-pc-advisors"> Committee Member in Shadow PC Advisors within the Shadow PC-track</a>,  
+                  and <a href="https://conf.researchr.org/committee/msr-2022/msr-2022-technical-papers-program-committee">Program Committee member (Technical Track)</a> in the MSR 2022 conference.</li>               
+                <li> <b>[2022] -</b> Received the <a href="https://twitter.com/msrconf/status/1520584652997730306">"Distinguished Reviewer Award"</a> for MSR 2022 conference (Technical Track). </li>          
+                <li> <b>[2021] -</b> Received the <a href="https://twitter.com/msrconf/status/1390444181655539716">"Distinguished Reviewer Award"</a> for MSR 2021 conference (Technical Track). </li>
                 <li> <b>[2021] -</b> Served as a Program Committee member (Technical Track) in the <a href="https://2021.msrconf.org/committee/msr-2021-technical-papers-program-committee">MSR'21 conference.</a></li>
                 <li> <b>[2021] -</b> Served as a Program Committee member in the <a href="https://www.oss2021.org/committee/oss-2021-papers-program-committee">OSS'21 conference.</a></li>
                 <li> <b>[2019] -</b> Our paper  <i>"Patterns of Effort Contribution and Demand and User Classification based on Participation Patterns in NPM Ecosystem"</i> received the <b>Best Paper Award </b> at the <a href="http://promisedata.org/2019/index.html">PROMISE - 2019</a> conference. </li>
