--- a/misc.html
+++ b/misc.html
@@ -11,55 +11,43 @@
 <!-- This document was automatically generated with bibtex2html 1.99
      (see http://www.lri.fr/~filliatr/bibtex2html/),
      with the following command:
-     bibtex2html -r -revkeys -noabstract -nokeywords -rawurl -nodoi ../tapjdey.github.io/files/misc.bib  -->
+     bibtex2html -r -revkeys -rawurl ../tapjdey.github.io/files/misc.bib  -->
 
 
 <table>
 
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="dey2022knights">8</a>]
+</td>
+<td class="bibtexitem">
+Tapajit Dey, Ning&nbsp;Willem Jiang, and Brian Fitzgerald.
+ Knights and gold stars: A case study of innersource incentivization.
+ 2022.
+[&nbsp;<a href="misc_bib.html#dey2022knights">bib</a>&nbsp;| 
+<a href="https://www.techrxiv.org/articles/preprint/Knights_and_Gold_Stars_A_Case_Study_of_InnerSource_Incentivization/19406609/1/files/34550978.pdf">Preprint</a>&nbsp;]
 
-  <tr valign="top">
-    <td align="right" class="bibtexnumber">
-    [<a name="imam2021tracking">9</a>]
-    </td>
-    <td class="bibtexitem">
-    Ahmed Imam and Tapajit Dey.
-     Tracking hackathon code creation and reuse.
-     <em>arXiv preprint arXiv:2103.10167</em>, 2021.
-    [&nbsp;<a href="misc_bib.html#imam2021tracking">bib</a>&nbsp;| 
-    <a href="https://arxiv.org/abs/2103.10167">https://arxiv.org/abs/2103.10167</a>&nbsp;]
-    &mdash; ACCEPTED in MSR-2021 Hackathon track.
-    </td>
-    </tr>
-    
-    
-  <tr valign="top">
-    <td align="right" class="bibtexnumber">
-    [<a name="imam2021secret">8</a>]
-    </td>
-    <td class="bibtexitem">
-    Ahmed Imam, Tapajit Dey, Alexander Nolte, Audris Mockus, and James&nbsp;D Herbsleb.
-     The secret life of hackathon code.
-     <em>arXiv preprint arXiv:2103.01145</em>, 2021.
-    [&nbsp;<a href="misc_bib.html#imam2021secret">bib</a>&nbsp;| 
-    <a href="https://arxiv.org/abs/2103.01145">https://arxiv.org/abs/2103.01145</a>&nbsp;]
-    &mdash; ACCEPTED in MSR-2021 Technical Track.
-    </td>
-    </tr>
+</td>
+</tr>
 
 
-  <tr valign="top">
-    <td align="right" class="bibtexnumber">
-    [<a name="dey2020representation">8</a>]
-    </td>
-    <td class="bibtexitem">
-    Tapajit Dey, Andrey Karnauch, and Audris Mockus.
-     <b>Representation of developer expertise in open source software.</b> 
-     <em>arXiv preprint arXiv:2005.10176</em>, 2020.
-    [&nbsp;<a href="misc_bib.html#dey2020representation">bib</a>&nbsp;| 
-    <a href="https://arxiv.org/pdf/2005.10176">https://arxiv.org/pdf/2005.10176</a>&nbsp;]
-    &mdash; ACCEPTED in ICSE-2021.
-    </td>
-    </tr>
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="dey2021replication">7</a>]
+</td>
+<td class="bibtexitem">
+Tapajit Dey, Andrey Karnauch, and Audris Mockus.
+ Replication package for representation of developer expertise in open
+  source software.
+ In <em>2021 IEEE/ACM 43rd International Conference on Software
+  Engineering: Companion Proceedings (ICSE-Companion)</em>, pages 236--237. IEEE,
+  2021.
+[&nbsp;<a href="misc_bib.html#dey2021replication">bib</a>&nbsp;|
+<a href="https://doi.org/10.5281/zenodo.4457107">https://doi.org/10.5281/zenodo.4457107</a>]
+
+</td>
+</tr>
+
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
@@ -74,7 +62,6 @@ Tapajit Dey and Audris Mockus.
 
 </td>
 </tr>
-
 
 
 <tr valign="top">
