--- a/misc_bib.html
+++ b/misc_bib.html
@@ -7,7 +7,9 @@
 </head>
 
 <body>
-<h1>misc.bib</h1><a name="ma2016crowdsourcing"></a><pre>
+<h1><a href="misc.html">back to list</a></h1>
+
+<a name="ma2016crowdsourcing"></a><pre>
 @article{<a href="misc.html#ma2016crowdsourcing">ma2016crowdsourcing</a>,
   title = {Crowdsourcing the discovery of software repositories in an educational environment},
   author = {Ma, Yuxing and Dey, Tapajit and Smith, Jarred M and Wilder, Nathan and Mockus, Audris},
@@ -66,33 +68,25 @@
 }
 </pre>
 
-<a name="dey2020representation"></a><pre>
-@article{<a href="misc.html#dey2020representation">dey2020representation</a>,
-  title = {Representation of Developer Expertise in Open Source Software},
+<a name="dey2021replication"></a><pre>
+@inproceedings{<a href="misc.html#dey2021replication">dey2021replication</a>,
+  title = {Replication package for representation of developer expertise in open source software},
   author = {Dey, Tapajit and Karnauch, Andrey and Mockus, Audris},
-  journal = {arXiv preprint arXiv:2005.10176},
-  year = {2020},
-  url = {https://arxiv.org/pdf/2005.10176}
+  booktitle = {2021 IEEE/ACM 43rd International Conference on Software Engineering: Companion Proceedings (ICSE-Companion)},
+  pages = {236--237},
+  year = {2021},
+  organization = {IEEE},
+  url={https://doi.org/10.5281/zenodo.4457107}
 }
 </pre>
 
-<a name="imam2021secret"></a><pre>
-@article{<a href="misc.html#imam2021secret">imam2021secret</a>,
-  title = {The Secret Life of Hackathon Code},
-  author = {Imam, Ahmed and Dey, Tapajit and Nolte, Alexander and Mockus, Audris and Herbsleb, James D},
-  journal = {arXiv preprint arXiv:2103.01145},
-  year = {2021},
-  url = {https://arxiv.org/abs/2103.01145}
-}
-</pre>
-
-<a name="imam2021tracking"></a><pre>
-@article{<a href="misc.html#imam2021tracking">imam2021tracking</a>,
-  title = {Tracking Hackathon Code Creation and Reuse},
-  author = {Imam, Ahmed and Dey, Tapajit},
-  journal = {arXiv preprint arXiv:2103.10167},
-  year = {2021},
-  url = {https://arxiv.org/abs/2103.10167}
+<a name="dey2022knights"></a><pre>
+@article{<a href="misc.html#dey2022knights">dey2022knights</a>,
+  title = {Knights and Gold Stars: A Case Study of InnerSource Incentivization},
+  author = {Dey, Tapajit and Jiang, Ning Willem and Fitzgerald, Brian},
+  year = {2022},
+  publisher = {TechRxiv},
+  url = {https://www.techrxiv.org/articles/preprint/Knights_and_Gold_Stars_A_Case_Study_of_InnerSource_Incentivization/19406609/1/files/34550978.pdf}
 }
 </pre>
 
