--- a/pubs_bib.html
+++ b/pubs_bib.html
@@ -7,7 +7,47 @@
 </head>
 
 <body>
-<h1>pubs.bib</h1><a name="ma2021world"></a><pre>
+<h1>Publication Bibtex</h1>
+<a name="dey2021skillspace"></a><pre>
+@inproceedings{<a href="pubs.html#dey2021skillspace">dey2021skillspace</a>,
+  author = {Dey, Tapajit and Karnauch, Andrey and Mockus, Audris},
+  booktitle = {2021 IEEE/ACM 43rd International Conference on Software Engineering (ICSE)},
+  title = {Representation of Developer Expertise in Open Source Software},
+  year = {2021},
+  volume = {},
+  number = {},
+  pages = {995-1007},
+  doi = {10.1109/ICSE43902.2021.00094}
+}
+</pre>
+
+<a name="imam2021secret"></a><pre>
+@inproceedings{<a href="pubs.html#imam2021secret">imam2021secret</a>,
+  author = {Imam, Ahmed and Dey, Tapajit and Nolte, Alexander and Mockus, Audris and Herbsleb, James D.},
+  booktitle = {2021 IEEE/ACM 18th International Conference on Mining Software Repositories (MSR)},
+  title = {The Secret Life of Hackathon Code Where does it come from and where does it go?},
+  year = {2021},
+  volume = {},
+  number = {},
+  pages = {68-79},
+  doi = {10.1109/MSR52588.2021.00020}
+}
+</pre>
+
+<a name="imam2021tracking"></a><pre>
+@inproceedings{<a href="pubs.html#imam2021tracking">imam2021tracking</a>,
+  author = {Imam, Ahmed and Dey, Tapajit},
+  booktitle = {2021 IEEE/ACM 18th International Conference on Mining Software Repositories (MSR)},
+  title = {Tracking Hackathon Code Creation and Reuse},
+  year = {2021},
+  volume = {},
+  number = {},
+  pages = {615-617},
+  doi = {10.1109/MSR52588.2021.00085}
+}
+</pre>
+
+<a name="ma2021world"></a><pre>
 @article{<a href="pubs.html#ma2021world">ma2021world</a>,
   title = {World of code: enabling a research workflow for mining and analyzing the universe of open source VCS data},
   author = {Ma, Yuxing and Dey, Tapajit and Bogart, Chris and Amreen, Sadika and Valiev, Marat and Tutko, Adam and Kennard, David and Zaretzki, Russell and Mockus, Audris},
