--- a/index.html
+++ b/index.html
@@ -140,10 +140,10 @@
             <!-- NEWS -->
             <div class="row" style="margin-bottom:1cm;">
                 <br>
-                <div style="font-family: Arial, Helvetica, sans-serif; font-size: 28px;"><b>Latest News (May 2022)</b></div>
+                <div style="font-family: Arial, Helvetica, sans-serif; font-size: 28px;"><b>Latest News (June 2022)</b></div>
                 <ul>
+		    <li>I am honored to serve as the Publicity & Social Media Co-Chair for the MSR'23 conference (once again after MSR'22).</li>
                     <li>I have been awarded the "Distinguished Reviewer Award" for MSR 2022 Technical Track for the second consecutive year (after MSR'21).</li>
-                    <li>I'm honored to serve as the Publicity & Social Media Co-Chair, Shadow-PC Mentor, and PC member for the MSR'22 conference.</li>
                     <li>I'm nonored to serve as a PC member in ICSE'23 Technical Track.</li>
                     <li>I'm honored to serve as the Proceedings Chair in PROMISE'22.</li>
                     <li>I'm have been promoted to a Postdoctoral Fellow in Lero at the University of Limerick.</li>
