update on Sep 2022

--- a/index.html
+++ b/index.html
@@ -118,14 +118,14 @@
           <div class="col-md-9">
 
             <div class="row">
-              <div style="font-family: Arial, Helvetica, sans-serif; font-size: 28px;"><b>Studies and Research</b></div>
+              <div style="font-family: Arial, Helvetica, sans-serif; font-size: 28px;"><b>Introduction</b></div>
               <p>
                 <br>
-                I am a <b>Postdoctoral Fellow</b> at <a href="https://www.lero.ie/">Lero, the Science Foundation 
+                I am a <b>Postdoctoral Research Fellow</b> at <a href="https://www.lero.ie/">Lero, the Science Foundation 
                 Ireland Research Centre for Software</a> at the <a href="https://www.ul.ie/">University of Limerick</a> (UL), 
                 working with <a href="https://www.lero.ie/people/brian-fitzgerald">Prof. Brian Fitzgerald</a> on the
-                <a href="https://trees.lero.ie/">TREES project</a> working on making the lives of Open Source Newcomers & projects a bit easier, 
-                in a collaboration project with Dr. Ahmed E. Hassan and his team at Huawei@Canada and 
+                <a href="https://trees.lero.ie/">TREES project</a> working on facilitating Open Source Newcomers and 
+                New OSS projects in a collaboration project with Huawei@Canada and 
                 also on facilitating InnerSource implementation at Huawei@China. <br>
                 I finished my Ph.D. in Computer Science from the <a href="https://www.utk.edu/">University of Tennessee, Knoxville</a> (UTK)
                 with <a href="http://mockus.org/">Dr. Audris Mockus</a>, working on Open Source Software Supply Chain, bot detection, and 
@@ -142,11 +142,12 @@
                 <br>
                 <div style="font-family: Arial, Helvetica, sans-serif; font-size: 28px;"><b>Latest News (May 2022)</b></div>
                 <ul>
+                    <li>I am honored to serve as the Publicity & Social Media Co-Chair and PC member for the Mining Challenge Track for the MSR'23 conference.</li>
+                    <li>I am honored to serve in the Diversity Committee of Lero and as a member of Lero's Open Source Programme Office (OSPO).</li>
                     <li>I have been awarded the "Distinguished Reviewer Award" for MSR 2022 Technical Track for the second consecutive year (after MSR'21).</li>
                     <li>I'm honored to serve as the Publicity & Social Media Co-Chair, Shadow-PC Mentor, and PC member for the MSR'22 conference.</li>
                     <li>I'm nonored to serve as a PC member in ICSE'23 Technical Track.</li>
                     <li>I'm honored to serve as the Proceedings Chair in PROMISE'22.</li>
-                    <li>I'm have been promoted to a Postdoctoral Fellow in Lero at the University of Limerick.</li>
                 </ul>
             </div>
             
@@ -226,6 +227,7 @@
             <div style="font-family: Arial, Helvetica, sans-serif; font-size: 28px;" ><b> Notable Positions, Awards, and Recognitions</b></div>
             <br>
             <ul>
+                <li> <b>[2023] -</b> Will serve as the Publicity & Social Media Co-Chair and Mining Challenge PC Member in the MSR 2023 conference.</li>
                 <li> <b>[2023] -</b> Will serve as a Program Committee member (Technical Track) in the <a href="https://conf.researchr.org/committee/icse-2023/icse-2023-technical-track-programme-committee">ICSE'23 conference.</a></li> 
                 <li> <b>[2022] -</b> Will serve as the Proceedings Chair in the <a href="https://promiseconf.github.io/2022/index.html">PROMISE'22 conference.</a></li>
                 <li> <b>[2022] -</b> Served as <a href="https://conf.researchr.org/committee/msr-2022/msr-2022-organizing-committee">Publicity & Social Media Co-Chair</a>, 
