--- a/misc.html
+++ b/misc.html
@@ -18,14 +18,30 @@
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
+[<a name="samir2022one">9</a>]
+</td>
+<td class="bibtexitem">
+Ahmed Samir Imam&nbsp;Mahmoud, Tapajit Dey, Alexander Nolte, Audris Mockus, and
+  James&nbsp;D Herbsleb.
+ One-off events? an empirical study of hackathon code creation and
+  reuse.
+ACCEPTED in Empirical Software Engineering journal.
+[&nbsp;<a href="misc_bib.html#samir2022one">bib</a>&nbsp;| 
+<a href="https://arxiv.org/pdf/2207.01015">Preprint</a>&nbsp;]
+
+</td>
+</tr>
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
 [<a name="dey2022knights">8</a>]
 </td>
 <td class="bibtexitem">
-Tapajit Dey, Ning&nbsp;Willem Jiang, and Brian Fitzgerald.
+Tapajit Dey, Ning (Willem) Jiang, and Brian Fitzgerald.
  Knights and gold stars: A case study of innersource incentivization.
- 2022.
+ 2022. ACCEPTED IN IEEE Software journal.
 [&nbsp;<a href="misc_bib.html#dey2022knights">bib</a>&nbsp;| 
-<a href="https://www.techrxiv.org/articles/preprint/Knights_and_Gold_Stars_A_Case_Study_of_InnerSource_Incentivization/19406609/1/files/34550978.pdf">Preprint</a>&nbsp;]
+<a href="https://arxiv.org/pdf/2207.08475">Preprint</a>&nbsp;]
 
 </td>
 </tr>
