--- a/misc_bib.html
+++ b/misc_bib.html
@@ -82,11 +82,20 @@
 
 <a name="dey2022knights"></a><pre>
 @article{<a href="misc.html#dey2022knights">dey2022knights</a>,
-  title = {Knights and Gold Stars: A Case Study of InnerSource Incentivization},
-  author = {Dey, Tapajit and Jiang, Ning Willem and Fitzgerald, Brian},
-  year = {2022},
-  publisher = {TechRxiv},
-  url = {https://www.techrxiv.org/articles/preprint/Knights_and_Gold_Stars_A_Case_Study_of_InnerSource_Incentivization/19406609/1/files/34550978.pdf}
+  title = {Knights and Gold Stars: A Tale of InnerSource Incentivization},
+  author = {Dey, Tapajit and Jiang, Willem and Fitzgerald, Brian},
+  journal = {arXiv preprint arXiv:2207.08475},
+  year = {2022}
+}
+</pre>
+
+<a name="samir2022one"></a><pre>
+@article{<a href="misc.html#samir2022one">samir2022one</a>,
+  title = {One-off Events? An Empirical Study of Hackathon Code Creation and Reuse},
+  author = {Samir Imam Mahmoud, Ahmed and Dey, Tapajit and Nolte, Alexander and Mockus, Audris and Herbsleb, James D},
+  journal = {arXiv e-prints},
+  pages = {arXiv--2207},
+  year = {2022}
 }
 </pre>
 
