added application materials

--- a/index.html
+++ b/index.html
@@ -111,6 +111,9 @@
               <div itemscope itemtype="https://schema.org/Person"><a itemprop="sameAs" content="https://orcid.org/0000-0002-1379-8539" href="https://orcid.org/0000-0002-1379-8539" target="orcid.widget" rel="me noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon">0000-0002-1379-8539</a></div>
               <!-- <dd><a href="files/Tapajit_Dey_CV.pdf" target="_blank">Download CV</a></dd> -->
               <dd><a href="https://youtube.com/playlist?list=PLrYIYBqPz6TmGwaV9PzQbGmDqtL0ALYWJ">A Playlist of my talks from YouTube</a></dd>
+              <dd><a href="files/Research Statement.pdf" target="_blank">Download Research Statement (Generic)</a></dd>
+              <dd><a href="files/Teaching Statement.pdf" target="_blank">Download Teaching Statement (Generic)</a></dd>
+              <dd><a href="files/Diversity Statement.pdf" target="_blank">Download Diversity Statement (Generic)</a></dd>
               </p>     
           </div>
 
@@ -123,18 +126,18 @@
                 <br>
                 I am a <b>Postdoctoral Research Fellow</b> at <a href="https://www.lero.ie/">Lero, the Science Foundation 
                 Ireland Research Centre for Software</a> at the <a href="https://www.ul.ie/">University of Limerick</a> (UL), 
-                working with <a href="https://www.lero.ie/people/brian-fitzgerald">Prof. Brian Fitzgerald</a> on the
-                <a href="https://trees.lero.ie/">TREES project</a> working on facilitating Open Source Newcomers and 
-                New OSS projects in a collaboration project with Huawei@Canada and 
+                working with <a href="https://www.lero.ie/people/brian-fitzgerald">Prof. Brian Fitzgerald</a> on the €6M
+                <a href="https://trees.lero.ie/">TREES project,</a> working on facilitating Open Source Newcomers and 
+                New OSS projects in a collaboration project with Huawei@Canada, and 
                 also on facilitating InnerSource implementation at Huawei@China. <br>
                 I finished my Ph.D. in Computer Science from the <a href="https://www.utk.edu/">University of Tennessee, Knoxville</a> (UTK)
-                with <a href="http://mockus.org/">Dr. Audris Mockus</a>, working on Open Source Software Supply Chain, bot detection, and 
-                modeling various user-affected software properties from the prespective of the Information System Success Model. <br>
+                with <a href="http://mockus.org/">Dr. Audris Mockus</a>.
+                In my Ph.D. research, I adopted the socio-technical view  to understand how software users and the interdependencies among software components (the software supply chain) affect its success by leveraging the Information System Success Model.
+                 <br>
                 I received my Bachelors and Masters Degree (under the Dual-Degree program) from the <a href="http://www.iitkgp.ac.in/">Indian 
                 Institute of Technology (IIT), Kharagpur</a> in Electronics and Electrical Communication 
                 Engineering and worked in <b>IBM</b> for 3 years before joining my Ph.D. <br></br>
-                In terms of Research, my interests comprise the topics of <i>Open Source</i> and <i>InnerSource</i> software development, 
-                <i>Empirical Software Engineering, Mining Software Repositories</i>, and <i>data analytics.</i> 
+                In terms of Research, my interests comprise the topics of Empirical Software Engineering, Open Source and InnerSource software development, Human Aspects of Software Engineering, Mining Software Repositories, Data Analysis, and Role of Bots/Automation in Software Development.
               </p>
             </div>
             <!-- NEWS -->
@@ -142,12 +145,13 @@
                 <br>
                 <div style="font-family: Arial, Helvetica, sans-serif; font-size: 28px;"><b>Latest News (September 2022)</b></div>
                 <ul>
+                    <li>I'll be serving as a PC member in ICSE'24 Technical Track.</li>
                     <li>I am honored to serve as the Publicity & Social Media Co-Chair and PC member for the Mining Challenge Track for the MSR'23 conference.</li>
                     <li>I am honored to serve in the Diversity Committee of Lero and as a member of Lero's Open Source Programme Office (OSPO).</li>
-                    <li>I have been awarded the "Distinguished Reviewer Award" for MSR 2022 Technical Track for the second consecutive year (after MSR'21).</li>
-                    <li>I'm honored to serve as the Publicity & Social Media Co-Chair, Shadow-PC Mentor, and PC member for the MSR'22 conference.</li>
-                    <li>I'm nonored to serve as a PC member in ICSE'23 Technical Track.</li>
+                    <li>I'm honored to serve as a PC member in ICSE'23 Technical Track.</li>
                     <li>I'm honored to serve as the Proceedings Chair in PROMISE'22.</li>
+                    <li>I have been awarded the "Distinguished Reviewer Award" for MSR 2022 Technical Track for the second consecutive year (after MSR'21).</li>
+                    <li>I'm honored to have served as the Publicity & Social Media Co-Chair, Shadow-PC Mentor, and PC member (Technical Track) for the MSR'22 conference.</li>
                 </ul>
             </div>
             
@@ -192,7 +196,7 @@
               <a href="http://www.unesco.org/new/en/communication-and-information/portals-and-platforms/goap/open-science-movement/">Open Science Movement</a>,
               and support making knowledge accessible to everyone. To that end, I am really passionate about the success of the Open Source movement.</li>
               <li>
-              I also feel scholars around the world should do everying they can to devise ways of mitigating the effects of climate change as much as possible. 
+              I also feel scholars around the world should do everything they can to devise ways of mitigating the effects of climate change as much as possible. 
               COVID-19 has shown everyone what the collective effort of scientists around the world can achieve and I'm hopeful we can do something about climate change as well.
               To that end, I'm exploring how I myself can contribute to Green technologies.</li>
               <li>
@@ -213,7 +217,7 @@
             <ul>
               <li><b>Fall 2020 - Present &mdash;</b> <i>Lecturer</i>: CS4911 - Introduction to Information Technology @ UL </li>
               <i>Modified the course and assessment to conform with COVID-19 related restrictions & virtual teaching requirements, 
-              included new topics like Cyber Security, Edge & Quantum Computing, and moderninzed the rest of the lecture topics to include latest developments.</i>
+              included new topics like Cyber Security, Edge & Quantum Computing, and modernized the rest of the lecture topics to include latest developments.</i>
               <li> <b>Spring 2017 &mdash;</b> <i>Teaching Assistant:</i> <a href="http://web.eecs.utk.edu/~bvanderz/teaching/cs365Sp17/general_info.html"> Programming Languages and Systems</a> @ UTK</li>
               <li> <b>Fall 2016 &mdash; </b> <i>Teaching Assistant:</i> Fundamentals of Digital Archeology  @ UTK</li>
               <li><b>Spring 2016 &mdash; </b> <i>Teaching Assistant:</i> <a href="http://web.eecs.utk.edu/~mbeck/classes/Spring16-cs361/"> Operating Systems</a>  @ UTK</li>
@@ -227,7 +231,8 @@
             <div style="font-family: Arial, Helvetica, sans-serif; font-size: 28px;" ><b> Notable Positions, Awards, and Recognitions</b></div>
             <br>
             <ul>
-                <li> <b>[2023] -</b> Will serve as the Publicity & Social Media Co-Chair and Mining Challenge PC Member in the MSR 2023 conference.</li>
+                <li> <b>[2024] -</b> Will serve as a PC Member (Technical Track) in the ICSE 2024 conference.</li>
+                <li> <b>[2023] -</b> Will serve as the <a href="https://conf.researchr.org/committee/msr-2023/msr-2023-organizing-committee">Publicity & Social Media Co-Chair</a> and <a href="https://conf.researchr.org/track/msr-2023/msr-2023-mining-challenge">Mining Challenge PC Member</a> in the MSR 2023 conference.</li>
                 <li> <b>[2023] -</b> Will serve as a Program Committee member (Technical Track) in the <a href="https://conf.researchr.org/committee/icse-2023/icse-2023-technical-track-programme-committee">ICSE'23 conference.</a></li> 
                 <li> <b>[2022] -</b> Will serve as the Proceedings Chair in the <a href="https://promiseconf.github.io/2022/index.html">PROMISE'22 conference.</a></li>
                 <li> <b>[2022] -</b> Served as <a href="https://conf.researchr.org/committee/msr-2022/msr-2022-organizing-committee">Publicity & Social Media Co-Chair</a>, 
