--- a/misc.html
+++ b/misc.html
@@ -23,8 +23,7 @@
 <td class="bibtexitem">
 Ahmed Samir Imam&nbsp;Mahmoud, Tapajit Dey, Alexander Nolte, Audris Mockus, and
   James&nbsp;D Herbsleb.
- One-off events? an empirical study of hackathon code creation and
-  reuse.
+ <b>One-off Events? An Empirical Study of Hackathon Code Creation and Reuse.</b>
 ACCEPTED in Empirical Software Engineering journal.
 [&nbsp;<a href="misc_bib.html#samir2022one">bib</a>&nbsp;| 
 <a href="https://arxiv.org/pdf/2207.01015">Preprint</a>&nbsp;]
@@ -38,8 +37,8 @@ ACCEPTED in Empirical Software Engineering journal.
 </td>
 <td class="bibtexitem">
 Tapajit Dey, Ning (Willem) Jiang, and Brian Fitzgerald.
- Knights and gold stars: A case study of innersource incentivization.
- 2022. ACCEPTED IN IEEE Software journal.
+ <b>Knights and Gold Stars: A Tale of InnerSource Incentivization.</b>
+ 2022. ACCEPTED in IEEE Software journal.
 [&nbsp;<a href="misc_bib.html#dey2022knights">bib</a>&nbsp;| 
 <a href="https://arxiv.org/pdf/2207.08475">Preprint</a>&nbsp;]
 
